--- a/Sales_predictions.ipynb
+++ b/Sales_predictions.ipynb
@@ -2608,46 +2608,21 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 336
+          "base_uri": "https://localhost:8080/"
         },
-        "collapsed": true,
         "id": "OPy--LTnyP2h",
-        "outputId": "4cfe5384-87fa-4c49-8038-18da23f03b97"
+        "outputId": "66b7dd0d-4492-40fb-d17e-201bbd1e1d08"
       },
-      "execution_count": 41,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Collecting xgboost==1.7.2\n",
-            "  Downloading xgboost-1.7.2-py3-none-manylinux2014_x86_64.whl.metadata (1.9 kB)\n",
+            "Requirement already satisfied: xgboost==1.7.2 in /usr/local/lib/python3.10/dist-packages (1.7.2)\n",
             "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (from xgboost==1.7.2) (1.26.4)\n",
-            "Requirement already satisfied: scipy in /usr/local/lib/python3.10/dist-packages (from xgboost==1.7.2) (1.13.1)\n",
-            "Downloading xgboost-1.7.2-py3-none-manylinux2014_x86_64.whl (193.6 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m193.6/193.6 MB\u001b[0m \u001b[31m6.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: xgboost\n",
-            "  Attempting uninstall: xgboost\n",
-            "    Found existing installation: xgboost 2.1.3\n",
-            "    Uninstalling xgboost-2.1.3:\n",
-            "      Successfully uninstalled xgboost-2.1.3\n",
-            "Successfully installed xgboost-1.7.2\n"
+            "Requirement already satisfied: scipy in /usr/local/lib/python3.10/dist-packages (from xgboost==1.7.2) (1.13.1)\n"
           ]
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "application/vnd.colab-display-data+json": {
-              "pip_warning": {
-                "packages": [
-                  "xgboost"
-                ]
-              },
-              "id": "dd1814993b634228b9862d1f691ca440"
-            }
-          },
-          "metadata": {}
         }
       ]
     },
@@ -2662,9 +2637,9 @@
         },
         "collapsed": true,
         "id": "TZEXgI3Yxef6",
-        "outputId": "332b834a-219a-485a-c403-aad057037007"
+        "outputId": "b7c332c9-5baf-4085-fcdd-aaab9c6ecf18"
       },
-      "execution_count": 42,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -2672,95 +2647,27 @@
           "text": [
             "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.10/dist-packages (1.5.2)\n",
             "Collecting scikit-learn\n",
-            "  Downloading scikit_learn-1.6.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (18 kB)\n",
+            "  Using cached scikit_learn-1.6.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (18 kB)\n",
             "Requirement already satisfied: xgboost in /usr/local/lib/python3.10/dist-packages (1.7.2)\n",
             "Collecting xgboost\n",
-            "  Downloading xgboost-2.1.3-py3-none-manylinux_2_28_x86_64.whl.metadata (2.1 kB)\n",
+            "  Using cached xgboost-2.1.3-py3-none-manylinux_2_28_x86_64.whl.metadata (2.1 kB)\n",
             "Requirement already satisfied: numpy>=1.19.5 in /usr/local/lib/python3.10/dist-packages (from scikit-learn) (1.26.4)\n",
             "Requirement already satisfied: scipy>=1.6.0 in /usr/local/lib/python3.10/dist-packages (from scikit-learn) (1.13.1)\n",
             "Requirement already satisfied: joblib>=1.2.0 in /usr/local/lib/python3.10/dist-packages (from scikit-learn) (1.4.2)\n",
             "Requirement already satisfied: threadpoolctl>=3.1.0 in /usr/local/lib/python3.10/dist-packages (from scikit-learn) (3.5.0)\n",
             "Requirement already satisfied: nvidia-nccl-cu12 in /usr/local/lib/python3.10/dist-packages (from xgboost) (2.23.4)\n",
-            "Downloading scikit_learn-1.6.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (13.5 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m13.5/13.5 MB\u001b[0m \u001b[31m35.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading xgboost-2.1.3-py3-none-manylinux_2_28_x86_64.whl (153.9 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m153.9/153.9 MB\u001b[0m \u001b[31m3.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h\u001b[31mERROR: Operation cancelled by user\u001b[0m\u001b[31m\n",
-            "\u001b[0mTraceback (most recent call last):\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/pip/_vendor/pkg_resources/__init__.py\", line 3070, in _dep_map\n",
-            "    return self.__dep_map\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/pip/_vendor/pkg_resources/__init__.py\", line 2863, in __getattr__\n",
-            "    raise AttributeError(attr)\n",
-            "AttributeError: _DistInfoDistribution__dep_map\n",
-            "\n",
-            "During handling of the above exception, another exception occurred:\n",
-            "\n",
-            "Traceback (most recent call last):\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/pip/_internal/cli/base_command.py\", line 179, in exc_logging_wrapper\n",
-            "    status = run_func(*args)\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/pip/_internal/cli/req_command.py\", line 67, in wrapper\n",
-            "    return func(self, options, args)\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/pip/_internal/commands/install.py\", line 447, in run\n",
-            "    conflicts = self._determine_conflicts(to_install)\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/pip/_internal/commands/install.py\", line 578, in _determine_conflicts\n",
-            "    return check_install_conflicts(to_install)\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/pip/_internal/operations/check.py\", line 101, in check_install_conflicts\n",
-            "    package_set, _ = create_package_set_from_installed()\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/pip/_internal/operations/check.py\", line 42, in create_package_set_from_installed\n",
-            "    dependencies = list(dist.iter_dependencies())\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/pip/_internal/metadata/pkg_resources.py\", line 247, in iter_dependencies\n",
-            "    return self._dist.requires(extras)\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/pip/_vendor/pkg_resources/__init__.py\", line 2786, in requires\n",
-            "    dm = self._dep_map\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/pip/_vendor/pkg_resources/__init__.py\", line 3072, in _dep_map\n",
-            "    self.__dep_map = self._compute_dependencies()\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/pip/_vendor/pkg_resources/__init__.py\", line 3082, in _compute_dependencies\n",
-            "    reqs.extend(parse_requirements(req))\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/pip/_vendor/pkg_resources/__init__.py\", line 3125, in parse_requirements\n",
-            "    return map(Requirement, join_continuation(map(drop_comment, yield_lines(strs))))\n",
-            "  File \"/usr/lib/python3.10/functools.py\", line 889, in wrapper\n",
-            "    return dispatch(args[0].__class__)(*args, **kw)\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/pip/_internal/utils/_jaraco_text.py\", line 59, in _\n",
-            "    @yield_lines.register(str)\n",
-            "KeyboardInterrupt\n",
-            "\n",
-            "During handling of the above exception, another exception occurred:\n",
-            "\n",
-            "Traceback (most recent call last):\n",
-            "  File \"/usr/local/bin/pip3\", line 8, in <module>\n",
-            "    sys.exit(main())\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/pip/_internal/cli/main.py\", line 80, in main\n",
-            "    return command.main(cmd_args)\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/pip/_internal/cli/base_command.py\", line 100, in main\n",
-            "    return self._main(args)\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/pip/_internal/cli/base_command.py\", line 232, in _main\n",
-            "    return run(options, args)\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/pip/_internal/cli/base_command.py\", line 215, in exc_logging_wrapper\n",
-            "    logger.critical(\"Operation cancelled by user\")\n",
-            "  File \"/usr/lib/python3.10/logging/__init__.py\", line 1524, in critical\n",
-            "    self._log(CRITICAL, msg, args, **kwargs)\n",
-            "  File \"/usr/lib/python3.10/logging/__init__.py\", line 1624, in _log\n",
-            "    self.handle(record)\n",
-            "  File \"/usr/lib/python3.10/logging/__init__.py\", line 1634, in handle\n",
-            "    self.callHandlers(record)\n",
-            "  File \"/usr/lib/python3.10/logging/__init__.py\", line 1696, in callHandlers\n",
-            "    hdlr.handle(record)\n",
-            "  File \"/usr/lib/python3.10/logging/__init__.py\", line 968, in handle\n",
-            "    self.emit(record)\n",
-            "  File \"/usr/lib/python3.10/logging/handlers.py\", line 75, in emit\n",
-            "    logging.FileHandler.emit(self, record)\n",
-            "  File \"/usr/lib/python3.10/logging/__init__.py\", line 1218, in emit\n",
-            "    StreamHandler.emit(self, record)\n",
-            "  File \"/usr/lib/python3.10/logging/__init__.py\", line 1100, in emit\n",
-            "    msg = self.format(record)\n",
-            "  File \"/usr/lib/python3.10/logging/__init__.py\", line 943, in format\n",
-            "    return fmt.format(record)\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/pip/_internal/utils/logging.py\", line 118, in format\n",
-            "    prefix = f\"{self.formatTime(record)} \"\n",
-            "  File \"/usr/lib/python3.10/logging/__init__.py\", line 619, in formatTime\n",
-            "    s = time.strftime(self.default_time_format, ct)\n",
-            "KeyboardInterrupt\n",
-            "^C\n"
+            "Using cached scikit_learn-1.6.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (13.5 MB)\n",
+            "Using cached xgboost-2.1.3-py3-none-manylinux_2_28_x86_64.whl (153.9 MB)\n",
+            "Installing collected packages: xgboost, scikit-learn\n",
+            "  Attempting uninstall: xgboost\n",
+            "    Found existing installation: xgboost 1.7.2\n",
+            "    Uninstalling xgboost-1.7.2:\n",
+            "      Successfully uninstalled xgboost-1.7.2\n",
+            "  Attempting uninstall: scikit-learn\n",
+            "    Found existing installation: scikit-learn 1.5.2\n",
+            "    Uninstalling scikit-learn-1.5.2:\n",
+            "      Successfully uninstalled scikit-learn-1.5.2\n",
+            "Successfully installed scikit-learn-1.6.0 xgboost-2.1.3\n"
           ]
         }
       ]
@@ -2774,7 +2681,6 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "collapsed": true,
         "id": "8CByW13Lx_ME",
         "outputId": "42594eb3-6960-4ae5-ec70-dbac7984a9b5"
       },
